Minor changes on small bugs

--- a/style.css
+++ b/style.css
@@ -441,7 +441,7 @@ align-items: center;
   }
   .choose , .feature{
     max-width: 100%;
-    padding: 100px;
+    padding: 200px;
   }
 
   .feature-card{
